@@ -194,6 +194,8 @@ Library
 
 Extension Modules
 -----------------
+- Issue #6877: It is now possible to link the readline extension to the
+  libedit readline emulation on OSX 10.5 or later.
 
 - Issue #6848: Fix curses module build failure on OS X 10.6.
 
